fixed spacing and alignment issues

--- a/src/components/DesktopAddGoalBtn/style.css
+++ b/src/components/DesktopAddGoalBtn/style.css
@@ -18,7 +18,7 @@ a {
     height: 50px;
     color: white;
     font-weight: 500;
-    width: 200px;
+    width: 150px;
     transition: .3s ease-in-out;
 }
 
